add responsive to login files

--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -16,13 +16,13 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="login.html"><img src="img/form_logo/logo_white.png"></a>
+            <a class="logo" href="login.html"><img src="img/form_logo/logo_white.png"></a>
         </div>
     </nav>
 
     <div class="forgotPassword">
         <div class="arrow-container">
-            <img class="arrow" src="img/blue_arrow.png">
+            <img class="arrow" src="img/form_logo/blue_arrow.png">
         </div>
 
         <div class="forgotPassword-container">
