--- a/login.html
+++ b/login.html
@@ -18,9 +18,9 @@
         <div class="logo">
             <img src="img/form_logo/logo_blue.png">
         </div>
-        <div>
+        <div class="not-a-user">
             <a class="no-user-link" href="">Not a Join User?</a>
-            <a class="sign-up-btn" href="">Sign up</a>
+            <a class="sign-up-btn" href="signUp.html">Sign up</a>
         </div>
     </nav>
 
@@ -40,12 +40,12 @@
                         <input type="checkbox" id="remember-me" name="remember-me" value="Remember me"><span>Remember me</span>
                     </label>
 
-                    <span class="forgot-password">Forgot my password</span>
+                    <a href="forgotPassword.html" class="forgot-password">Forgot my password</a>
                 </div>
 
                 <div class="login-btns">
-                    <button class="login-btn">Log in </button>
-                    <button class="guest-btn">Guest log in</button>
+                    <a  href="index.html" class="login-btn">Log in </a>
+                    <a href="index.html" class="guest-btn">Guest log in</a>
                 </div>
 
                 <div></div>
@@ -53,6 +53,10 @@
         </div>
     </div>
 
+    <div class="not-a-user-mobile">
+        <a class="no-user-link" href="">Not a Join User?</a>
+        <a class="sign-up-btn" href="signUp.html">Sign up</a>
+    </div>
 </body>
 
 </html>
