--- a/signUp.html
+++ b/signUp.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset password</title>
+    <title>Sign up</title>
     <link rel="shortcut icon" href="img/form_logo/logo_blue.png" type="image/x-icon">
     <link rel="stylesheet" href="css/form/fonts.css">
     <link rel="stylesheet" href="css/form/login.css">
