--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Join</title>
     <link rel="stylesheet" href="css/form/fonts.css">
     <link rel="stylesheet" href="css/kanban/index.css">
+    <script src="js/login.js" defer></script>
 </head>
 
 <body>
@@ -42,6 +43,7 @@
         <div class="main-field">
             <div class="summary-container">
                 <span class="gm-text">Good Morning, <span class="user-name">Name</span></span>
+                <p class="mobile-headline">Kanban Project Management Tool</p>
                 <div class="inner-summary-container">
                     <div class="upper-task-container">
                         <div class="task-urgent">
@@ -52,7 +54,7 @@
                                 </div>
 
                                 <div class="task-urgent-left-part-2">
-                                    <p>Task-urgent</p>
+                                    <p class="task-urgent-left-part-2-text">Task-urgent</p>
                                 </div>
 
                             </div>
@@ -75,14 +77,14 @@
 
                         <div class="task-card-upper">
                             <div class="inner-task-card-upper">
-                                <div>
+                                <div class="img-count-container">
                                     <div class="task-to-do">
                                         <img class="summary-img" src="img/kanban_logo/summary-icons/Board.png" alt="">
                                         <span class="summary-count-black">1</span>
                                     </div>
                                 </div>
 
-                                <div>
+                                <div class="task-text">
                                     <p class="blue-text">Task To-do</p>
                                 </div>
                             </div>
@@ -93,8 +95,8 @@
 
                     <div class="lower-task-container">
 
-                        <div class="task-card-lower">
-                            <div class="inner-task-card-upper">
+                        <div id="task-card-lower-1" class="task-card-lower">
+                            <div class="inner-task-card">
                                 <div>
                                     <div class="task-to-do">
                                         <img class="summary-img" src="img/kanban_logo/summary-icons/Board.png" alt="">
@@ -108,8 +110,8 @@
                             </div>
                         </div>
 
-                        <div class="task-card-lower">
-                            <div class="inner-task-card-upper">
+                        <div id="task-card-lower-2" class="task-card-lower">
+                            <div class="inner-task-card">
                                 <div>
                                     <div class="task-to-do">
                                         <img class="summary-img" src="img/kanban_logo/summary-icons/In Progress.png" alt="">
@@ -123,8 +125,8 @@
                             </div>
                         </div>
 
-                        <div class="task-card-lower">
-                            <div class="inner-task-card-upper">
+                        <div id="task-card-lower-3" class="task-card-lower">
+                            <div class="inner-task-card">
                                 <div>
                                     <div class="task-to-do">
                                         <img class="summary-img" src="img/kanban_logo/summary-icons/Awaiting feedback.png" alt="">
@@ -138,8 +140,8 @@
                             </div>
                         </div>
 
-                        <div class="task-card-lower">
-                            <div class="inner-task-card-upper">
+                        <div id="task-card-lower-4" class="task-card-lower">
+                            <div class="inner-task-card">
                                 <div>
                                     <div class="task-to-do">
                                         <img class="summary-img" src="img/kanban_logo/summary-icons/Done.png" alt="">
@@ -154,6 +156,14 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+            <div class="sidebar-mobile">
+                <div class="kanban-btns">
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/summary.png"><span>Summary</span></div>
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/board.png"><span>Board</span></div>
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/addTask.png"><span>Add Task</span></div>
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/contacts.png"><span>Contacts</span></div>
                 </div>
             </div>
     </main>
