--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="main-field">
             <div class="board-container">
+                <span class="board-headline-mobile blue-text">Kanban Project Mangement Tool</span>
                 <div class="search-field">
                     <div class="input-container">
                         <input placeholder="Find task" type="text" class="input">
@@ -62,27 +63,82 @@
                         </div>
 
                         <div class="added-task">
-                            <h4 class="task-topic white-text">Design</h4>
+                            <span class="task-topic white-text">Design</span>
                             <h4 class="task-headline blue-text">Redesign Website</h4>
                             <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
                             <div class="progress">
-                                <div class="progress-bar"></div> <span><span>3</span>/<span>3</span> Done</span>
+                                <div class="progress-bar"></div> <span class="addTask-amount"><span>3</span>/<span>3</span> Done</span>
                             </div>
                             <div class="board-user-img-container">
-
+                                <div class="user-tasks"></div>
+                                <img src="img/kanban_logo/non-urgent-green.png" class="priority-img">
                             </div>
                         </div>
+
                     </div>
                     <div class="board-in-progress width-25">
                         <div class="flex">
                             <h3 class="board-task-title">In Progress</h3>
                             <img class="board-task-img" src="img/kanban_logo/plus button.png">
                         </div>
+
+                        <div class="added-task">
+                            <span class="task-topic white-text">Design</span>
+                            <h4 class="task-headline blue-text">Redesign Website</h4>
+                            <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
+                            <div class="progress">
+                                <div class="progress-bar"></div> <span class="addTask-amount"><span>3</span>/<span>3</span> Done</span>
+                            </div>
+                            <div class="board-user-img-container">
+                                <div class="user-tasks"></div>
+                                <img src="img/kanban_logo/non-urgent-green.png" class="priority-img">
+                            </div>
+                        </div>
+
+                        <div class="added-task">
+                            <span class="task-topic white-text">Design</span>
+                            <h4 class="task-headline blue-text">Redesign Website</h4>
+                            <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
+                            <div class="progress">
+                                <div class="progress-bar"></div> <span class="addTask-amount"><span>3</span>/<span>3</span> Done</span>
+                            </div>
+                            <div class="board-user-img-container">
+                                <div class="user-tasks"></div>
+                                <img src="img/kanban_logo/non-urgent-green.png" class="priority-img">
+                            </div>
+                        </div>
+
                     </div>
                     <div class="board-await-feedback width-25">
                         <div class="flex">
                             <h3 class="board-task-title">Await Feedback</h3>
                             <img class="board-task-img" src="img/kanban_logo/plus button.png">
+                        </div>
+
+                        <div class="added-task">
+                            <span class="task-topic white-text">Design</span>
+                            <h4 class="task-headline blue-text">Redesign Website</h4>
+                            <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
+                            <div class="progress">
+                                <div class="progress-bar"></div> <span class="addTask-amount"><span>3</span>/<span>3</span> Done</span>
+                            </div>
+                            <div class="board-user-img-container">
+                                <div class="user-tasks"></div>
+                                <img src="img/kanban_logo/non-urgent-green.png" class="priority-img">
+                            </div>
+                        </div>
+
+                        <div class="added-task">
+                            <span class="task-topic white-text">Design</span>
+                            <h4 class="task-headline blue-text">Redesign Website</h4>
+                            <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
+                            <div class="progress">
+                                <div class="progress-bar"></div> <span class="addTask-amount"><span>3</span>/<span>3</span> Done</span>
+                            </div>
+                            <div class="board-user-img-container">
+                                <div class="user-tasks"></div>
+                                <img src="img/kanban_logo/non-urgent-green.png" class="priority-img">
+                            </div>
                         </div>
                     </div>
                     <div class="board-done width-25">
@@ -90,9 +146,30 @@
                             <h3 class="board-task-title">Done</h3>
                             <img class="board-task-img" src="img/kanban_logo/plus button.png">
                         </div>
+
+                        <div class="added-task">
+                            <span class="task-topic white-text">Design</span>
+                            <h4 class="task-headline blue-text">Redesign Website</h4>
+                            <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
+                            <div class="progress">
+                                <div class="progress-bar"></div> <span class="addTask-amount"><span>3</span>/<span>3</span> Done</span>
+                            </div>
+                            <div class="board-user-img-container">
+                                <div class="user-tasks"></div>
+                                <img src="img/kanban_logo/non-urgent-green.png" class="priority-img">
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
 
+            <div class="sidebar-mobile">
+                <div class="kanban-btns">
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/summary.png"><span>Summary</span></div>
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/board.png"><span>Board</span></div>
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/addTask.png"><span>Add Task</span></div>
+                    <div class="kanban-link"><img class="kanban-img" src="img/kanban_logo/contacts.png"><span>Contacts</span></div>
+                </div>
             </div>
 
         </div>
