finish responsiveness of add task

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         </div>
     </nav>
 
+    <nav class="mobile-create-task-navbar">
+        <img class="mobile-logo-blue" src="img/form_logo/logo_blue.png">
+        <button class="create-task-mobile-btn">Create <img class="white-clear" src="img/kanban_logo/white_clear_btn.png"></button>
+    </nav>
+
     <main class="kanban-main">
         <div class="sidebar">
             <div class="inner-sidebar">
