database connected with sign uo

--- a/signUp.html
+++ b/signUp.html
@@ -30,7 +30,7 @@
             }
 
             addUser(user)
-            
+            window.location.href = 'login.html'
         }
 
         function addUser(user) {
