--- a/login.html
+++ b/login.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="login_assets/login_css/generalForm.css">
     <link rel="stylesheet" href="login_assets/login_css/fonts.css">
     <link rel="stylesheet" href="login_assets/login_css/login.css">
-    <script src="js/login.js"></script>
+    
+    <script src="js/mini_backend.js"></script>
+    <script src="js/load.js" defer></script>
+    <script src="js/login.js" defer></script>
 </head>
 
 <body>
