--- a/addTask.html
+++ b/addTask.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/edit_task.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/task-info.css">
 
+    <script src="js/mini_backend.js"></script>
+    <script src="js/load.js" defer></script>
+    <script src="js/login.js" defer></script>
+
 </head>
 
 
