logout function finished

--- a/addTask.html
+++ b/addTask.html
@@ -42,7 +42,7 @@
             <span onclick="logout()" class="light-blue-text">Log out</span>
         </div>
     
-        <div class="logout-mobile">
+        <div class="logout-mobile d-none">
             <a href="kanban_assets/help.html" class="light-blue-text">Help</a>
             <a href="kanban_assets/legal_notice.html" class="light-blue-text">Legal Notice</a>
             <a onclick="logout()" class="light-blue-text">Log out</a>
